# syttra-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RUNBOOK.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/syttra/: __init__.py  _client.py  _http.py  errors.py  models.py
tests/: conftest.py  test_client.py  test_retry.py  test_watchers.py
