[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "syttra"
version = "0.0.1"
description = "Placeholder for the official Python SDK for Syttra (https://syttra.com). Real client lands in 0.1+."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Syttra", email = "development@syttra.com" },
]
keywords = ["syttra", "scraper", "web-scraping", "rag", "llm", "ai-agents"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://syttra.com"
Documentation = "https://syttra.com/docs"
Source = "https://github.com/syttra/syttra-python"
Issues = "https://github.com/syttra/syttra-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/syttra"]

[tool.hatch.build.targets.sdist]
include = [
  "src/syttra",
  "README.md",
  "LICENSE",
]
