[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "syttra"
version = "0.2.0"
description = "Official Python SDK for Syttra — clean, AI-ready web content as an API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Syttra", email = "development@syttra.com" },
]
keywords = ["syttra", "scraper", "web-scraping", "rag", "llm", "ai-agents"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.6,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.7",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://syttra.com"
Documentation = "https://syttra.com/docs/sdk/python"
Source = "https://github.com/syttra/syttra-python"
Issues = "https://github.com/syttra/syttra-python/issues"
Changelog = "https://github.com/syttra/syttra-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/syttra"]

[tool.hatch.build.targets.sdist]
include = [
  "src/syttra",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = [
  "E501",   # long lines fine in docstrings; formatter handles code
  "RUF022", # __all__ grouped semantically (client / errors / models), not alphabetical
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
